--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.2.1",
+    "@ckeditor/ckeditor5-vue": "^4.0.1",
     "axios": "^1.1.3",
     "sass": "^1.55.0",
     "vue": "^3.2.37",
